molina_deployments/flink_cluster_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flinkpoc
  # annotations:
  #   kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: flink-cluster-session-mode-rest
            port:
              number: 8081
        pathType: Exact
